chore: update .prettierrc configuration

--- a/.prettierrc
+++ b/.prettierrc
@@ -10,6 +10,6 @@
   "arrowParens": "always",
   "proseWrap": "preserve",
   "htmlWhitespaceSensitivity": "css",
-  "endOfLine": "lf",
+  "endOfLine": "auto",
   "plugins": ["prettier-plugin-organize-imports"]
 }
