--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.0.6",
+    "html5-qrcode": "^2.3.8",
     "i18next": "^23.15.1",
     "lucide-react": "^0.479.0",
     "qrcode.react": "^4.1.0",
